force-app/main/default/objects/DynamicForm__c/DynamicForm__c.object-meta.xml
<CustomObject>
    <label>Formulário Dinâmico</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Nomo de Formulário Dinâmico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulários Dinâmicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>