force-app/main/default/objects/DynamicForm__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Resposta</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>