force-app/main/default/objects/DynamicForm__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>Tipo de Dado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DataTypes</valueSetName>
    </valueSet>
</CustomField>