force-app/main/default/objects/DynamicForm__c/fields/FormFilter__c.field-meta.xml
<CustomField>
    <fullName>FormFilter__c</fullName>
    <label>Filtro do Formulário</label>
    <type>TextArea</type>
</CustomField>