force-app/main/default/objects/DynamicForm__c/fields/FormFilterValue__c.field-meta.xml
<CustomField>
    <fullName>FormFilterValue__c</fullName>
    <label>Valor do Filtro do Formulário</label>
    <type>TextArea</type>
</CustomField>