force-app/main/default/objects/DynamicForm__c/fields/FormObject__c.field-meta.xml
<CustomField>
    <fullName>FormObject__c</fullName>
    <label>Objeto do Formulário</label>
    <type>TextArea</type>
</CustomField>