force-app/main/default/objects/DynamicForm__c/fields/IsConcatenation__c.field-meta.xml
<CustomField>
    <fullName>IsConcatenation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concatenar Valor</label>
    <type>Checkbox</type>
</CustomField>