force-app/main/default/objects/DynamicForm__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatório</label>
    <type>Checkbox</type>
</CustomField>