force-app/main/default/objects/DynamicForm__c/fields/ObjectToValue__c.field-meta.xml
<CustomField>
    <fullName>ObjectToValue__c</fullName>
    <label>Objeto para Valorizar</label>
    <type>TextArea</type>
</CustomField>