force-app/main/default/objects/DynamicForm__c/fields/ParentForm__c.field-meta.xml
<CustomField>
    <fullName>ParentForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formulário Pai</label>
    <referenceTo>DynamicForm__c</referenceTo>
    <relationshipLabel>Registros Relacionados do Formulário</relationshipLabel>
    <relationshipName>Registros_Relacionados_Formulario</relationshipName>
    <type>Lookup</type>
</CustomField>