force-app/main/default/objects/DynamicForm__c/fields/ParentRecordId__c.field-meta.xml
<CustomField>
    <fullName>ParentRecordId__c</fullName>
    <label>Id do Registro Pai</label>
    <length>18</length>
    <type>Text</type>
</CustomField>