force-app/main/default/objects/DynamicForm__c/fields/QuestionOrder__c.field-meta.xml
<CustomField>
    <fullName>QuestionOrder__c</fullName>
    <label>Ordem da Pergunta</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>