force-app/main/default/objects/DynamicForm__c/fields/RelatedQuestion__c.field-meta.xml
<CustomField>
    <fullName>RelatedQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pergunta Relacionada</label>
    <referenceTo>DynamicForm__c</referenceTo>
    <relationshipLabel>Registros Relacionados da Pergunta</relationshipLabel>
    <relationshipName>Registros_Relacionados_Pergunta</relationshipName>
    <type>Lookup</type>
</CustomField>