force-app/main/default/objects/DynamicForm__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Seção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>