force-app/main/default/objects/DynamicForm__c/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>Campo Alvo</label>
    <type>TextArea</type>
</CustomField>