force-app/main/default/objects/DynamicForm__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Objeto Alvo</label>
    <type>TextArea</type>
</CustomField>