force-app/main/default/objects/DynamicForm__c/fields/TaskManagement__c.field-meta.xml
<CustomField>
    <fullName>TaskManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerenciamento de tarefas</label>
    <referenceTo>TaskManagement__c</referenceTo>
    <relationshipLabel>Formulários Dinâmicos</relationshipLabel>
    <relationshipName>Formul_rios_Din_micos</relationshipName>
    <type>Lookup</type>
</CustomField>