force-app/main/default/objects/DynamicForm__c/recordTypes/FormAnswer.recordType-meta.xml
<RecordType>
    <fullName>FormAnswer</fullName>
    <active>true</active>
    <description>Respostas armazenadas para registros que utilizam formulários dinâmicos.</description>
    <label>Resposta do Formulário</label>
</RecordType>