force-app/main/default/objects/DynamicForm__c/recordTypes/FormDefinition.recordType-meta.xml
<RecordType>
    <fullName>FormDefinition</fullName>
    <active>true</active>
    <description>Configuração principal do formulário dinâmico com filtros e objeto alvo.</description>
    <label>Definição de Formulário</label>
</RecordType>