force-app/main/default/objects/DynamicForm__c/recordTypes/FormQuestion.recordType-meta.xml
<RecordType>
    <fullName>FormQuestion</fullName>
    <active>true</active>
    <description>Perguntas configuradas para um formulário dinâmico.</description>
    <label>Pergunta do Formulário</label>
</RecordType>