force-app/main/default/objects/DynamicForm__c/recordTypes/FormTarget.recordType-meta.xml
<RecordType>
    <fullName>FormTarget</fullName>
    <active>true</active>
    <description>Mapeamentos de objetos e campos que receberão valores das respostas.</description>
    <label>Mapeamento do Formulário</label>
</RecordType>